--- a/NetCore/ADFCommon/ADF.DataAccess/ADF.DataAccess.csproj
+++ b/NetCore/ADFCommon/ADF.DataAccess/ADF.DataAccess.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Data.Common" Version="4.3.0" />
+    <PackageReference Include="System.Data.OracleClient" Version="1.0.8" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
   </ItemGroup>
 
