--- a/NetCore/ADFCommon/ADF.Web/appsettings.json
+++ b/NetCore/ADFCommon/ADF.Web/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DatabaseType": "Oracle", // 默认数据库类型,定义详见EFCore.Sharding.DatabaseType
+  "ConnectionName": "BaseDb", // 默认连接字符串名
+  "ConnectionStrings": {
+    // Oracle
+    "BaseDb": "Data Source=192.168.100.91/orcl;User ID=JHZM;Password=JHZM;Connect Timeout=3"
+  }
 }
