--- a/NetCore/ADFCommon/ADF.Business/ADF.Business.csproj
+++ b/NetCore/ADFCommon/ADF.Business/ADF.Business.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\ADF.DataAccess\ADF.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
