--- a/NetCore/ADFCommon/ADF.DataAccess/ADF.DataAccess.csproj
+++ b/NetCore/ADFCommon/ADF.DataAccess/ADF.DataAccess.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="System.Data.Common" Version="4.3.0" />
     <PackageReference Include="System.Data.OracleClient" Version="1.0.8" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
